Сделаны views для сообщения

--- a/HomeWork_2/settings.gradle
+++ b/HomeWork_2/settings.gradle
@@ -5,5 +5,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "WorkChat"
+rootProject.name = "workchat-android"
 include ':WorkChat'
