--- a/HomeWork_2/WorkChat/src/main/AndroidManifest.xml
+++ b/HomeWork_2/WorkChat/src/main/AndroidManifest.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.theost.workchat">
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -11,13 +12,18 @@
         android:theme="@style/Theme.WorkChat">
         <activity
             android:name=".ui.activity.HomeActivity"
-            android:exported="true">
+            android:windowSoftInputMode="adjustResize"
+            tools:ignore="IntentFilterExportedReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:theme="@style/Theme.WorkChat.Dialogs"
+            android:name=".ui.activity.DialogActivity"
+            android:windowSoftInputMode="adjustResize" />
     </application>
 
 </manifest>
