--- a/HomeWork_2/build.gradle
+++ b/HomeWork_2/build.gradle
@@ -14,4 +14,6 @@ ext {
     appCompatVersion = '1.3.1'
     materialVersion = '1.4.0'
     constraintVersion = '2.1.1'
+    activityVersion = '1.3.1'
+    fragmentVersion = '1.3.6'
 }
