--- a/HomeWork_2/build.gradle
+++ b/HomeWork_2/build.gradle
@@ -16,4 +16,8 @@ ext {
     constraintVersion = '2.1.1'
     activityVersion = '1.3.1'
     fragmentVersion = '1.3.6'
+
+    rxAndroidVersion = '3.0.0'
+    rxJavaVersion = '3.0.0'
+    shimmerVersion = '0.5.0'
 }
