--- a/HomeWork_2/build.gradle
+++ b/HomeWork_2/build.gradle
@@ -19,5 +19,11 @@ ext {
 
     rxAndroidVersion = '3.0.0'
     rxJavaVersion = '3.0.0'
+    okhttpVersion = '4.9.0'
+    okhttpLoggingVersion = '4.9.2'
+    retrofitVersion = '2.9.0'
+    retrofitRxJavaAdapterVersion = '2.9.0'
+    retrofitSerializationVersion = '0.8.0'
+    kotlinSerializationVersion = '1.2.2'
     shimmerVersion = '0.5.0'
 }
