--- a/HomeWork_2/build.gradle
+++ b/HomeWork_2/build.gradle
@@ -25,5 +25,7 @@ ext {
     retrofitRxJavaAdapterVersion = '2.9.0'
     retrofitSerializationVersion = '0.8.0'
     kotlinSerializationVersion = '1.2.2'
+    roomVersion = '2.3.0'
+    glideVersion = '4.12.0'
     shimmerVersion = '0.5.0'
 }
