Исправлена пагинация, добавлен плохой код

--- a/HomeWork_2/WorkChat/build.gradle
+++ b/HomeWork_2/WorkChat/build.gradle
@@ -74,4 +74,9 @@ dependencies {
     // Glide
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     kapt "com.github.bumptech.glide:compiler:$glideVersion"
+
+    // Elmslie
+    implementation "com.github.vivid-money.elmslie:elmslie-core:$elmslieVersion"
+    implementation "com.github.vivid-money.elmslie:elmslie-android:$elmslieVersion"
+    implementation "com.github.vivid-money.elmslie:elmslie-rxjava-2:$elmslieVersion"
 }
