--- a/HomeWork_2/build.gradle
+++ b/HomeWork_2/build.gradle
@@ -9,6 +9,14 @@ buildscript {
     }
 }
 
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+        maven { url "https://jitpack.io" }
+    }
+}
+
 ext {
     androidXCoreVersion = '1.6.0'
     appCompatVersion = '1.3.1'
@@ -28,4 +36,5 @@ ext {
     roomVersion = '2.3.0'
     glideVersion = '4.12.0'
     shimmerVersion = '0.5.0'
+    elmslieVersion = '1.2.0'
 }
