Исправлены view сообщений и реакций

--- a/HomeWork_2/WorkChat/src/main/AndroidManifest.xml
+++ b/HomeWork_2/WorkChat/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.theost.workchat">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -16,8 +15,8 @@
         <activity
             android:name=".ui.activities.MessengerActivity"
             android:configChanges="orientation|screenSize"
-            android:windowSoftInputMode="adjustResize"
-            tools:ignore="IntentFilterExportedReceiver">
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
