--- a/HomeWork_2/WorkChat/build.gradle
+++ b/HomeWork_2/WorkChat/build.gradle
@@ -6,12 +6,12 @@ plugins {
 }
 
 android {
-    compileSdk 30
+    compileSdk 31
 
     defaultConfig {
         applicationId "com.theost.workchat"
         minSdk 21
-        targetSdk 30
+        targetSdk 31
         versionCode 1
         versionName "1.0"
     }
@@ -83,4 +83,7 @@ dependencies {
     // Dagger 2
     implementation "com.google.dagger:dagger:$daggerVersion"
     kapt "com.google.dagger:dagger-compiler:$daggerVersion"
+
+    // Leak Canary
+    // debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
 }
