Исправлена клавиатура при OnResume

--- a/HomeWork_2/WorkChat/src/main/AndroidManifest.xml
+++ b/HomeWork_2/WorkChat/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
             android:name=".ui.activities.MessengerActivity"
             android:configChanges="orientation|screenSize"
             android:exported="true"
-            android:windowSoftInputMode="adjustResize">
+            android:windowSoftInputMode="stateHidden|adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
