--- a/HomeWork_2/WorkChat/build.gradle
+++ b/HomeWork_2/WorkChat/build.gradle
@@ -75,6 +75,9 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     kapt "com.github.bumptech.glide:compiler:$glideVersion"
 
+    // CircularProgressBar Drawable
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+
     // Elmslie
     implementation "com.github.vivid-money.elmslie:elmslie-core:$elmslieVersion"
     implementation "com.github.vivid-money.elmslie:elmslie-android:$elmslieVersion"
